Add ranged readings history support
